1.4.2:

1.4.1:
* segway: fix --bigBed for assemblies with alt chromosomes not being sorted
  correctly
* segway: --num-minibatch-windows can now be seeded with SEGWAY_RAND_SEED and
  will select the same windows with when given the same seed 
  (thanks to Rachel Chan)
* segway: fix --prior-strength option
* segway: local job submission now appends error logs instead of rewriting them
* segway: add resolution functionality for semisupervised mode 
  (thanks to Rachel Chan)
* segway: add 'annotate' as an alias for 'identify' (thanks to Rachel Chan)
* segway: fix memory leak due to DRMAA job templates not being deleted
* segway: change queueing functionality such that segway queues a shell file
  containing the to-be-queued arguments, instead of queueing the arguments
  themselves (thanks to Rachel Chan)
* segway: change output message to specify whether the job is queued or
  run locally (thanks to Rachel Chan)
* segway: work around a GMTK bug when indexing a genomic region with a number
  greater than 9999 (thanks to Rachel Chan)

1.4.0:
* segway: added support for --num-minibatch-windows, which causes Segway
  to train on random subset of windows at each iteration in order to
  enable training to touch every genomic position while maintaining fast
  iterations. (thanks to Max Libbrecht)
* segway: remove optparse in favour of using argparse instead
* segway: fix --split-sequences specifying where to split GMTK frames instead
  of by base pair length

1.3.4:
* segway: set minimum segment length default to ruler length
* segway: remove simpleresubmit test from being tested with all tests by
  default due to memory requirement differences between platforms
* segway: change tests to use $testdir instead of $TMPDIR to avoid setting new
  base directory for segway-wrapper.sh
* segway: add and fix better job handling for segway-task (identify)
* segway: add drmaa handling for "IBM Platform LSF"
* segway: fix not using user specified ruler_scale when set to 10

1.3.2: